<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/element_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <include android:id="@+id/src" layout="@layout/view_inserter_juice_layout"/>

        <Button
            android:onClick="onButtonClick"
            android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/save_example_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include android:id="@+id/dst" layout="@layout/view_inserter_juice_layout"/>
    </LinearLayout>
</ScrollView>